mejoras en la visualizacion de la pagina Partidos
